@@ -17,9 +17,11 @@ import java.util.List;
 public class TestController {
 
 
+
     @GetMapping("/test")
     public String test(Model m) {
-
+        User user = new User();
+        user.getId();
         System.out.println("test");
         List<User> userList = new ArrayList<>();
         for (int i = 0; i < 4; i++) {
@@ -27,8 +29,22 @@ public class TestController {
         }
 
 
+
         m.addAttribute("name","liuxun");
         m.addAttribute("userList",userList);
         return "test.html";
+    }
+
+    @Override
+    public String toString() {
+        return super.toString();
+    }
+
+    public  static void main(String[] args){
+        //-Xms1024m -Xmx1024m -XX:+PrintGCDetails
+        long min = Runtime.getRuntime().totalMemory();
+        long max = Runtime.getRuntime().maxMemory();
+        System.out.println(min / 1024 / 1024);
+        System.out.println(max / 1024 / 1024);
     }
 }
